added  more content and loading indicator

--- a/css/index.css
+++ b/css/index.css
@@ -96,9 +96,7 @@ p{
 
 }
 
-
-
-.nav-links{
+.nav-links {
   display: flex;
   align-items: center;
   height: 2em;
@@ -110,6 +108,10 @@ p{
 .nav-links:hover{
  color: lightskyblue;
 
+}
+
+.seen ::after {
+  color: green;
 }
 
 h2{
@@ -158,7 +160,11 @@ h2{
   padding-right: 30em;
 }
 
-
+.loading {
+  display: none;
+  width: 75%;
+  padding-left: 12px;
+}
 
 .description{
   box-shadow: 1px 1px 11px white;
@@ -280,6 +286,7 @@ h2{
   color: white;
   text-transform: capitalize;
 }
+
 @media only screen and(max-width:600px){
 
 .navbar{
