--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ h2{
 }
 
 .dell-prd{
-  background-image: url("../img/dell-ware.jpg");
+  background-image: url('../img/dell-ware.jpg');
   z-index: 999;
   background-position: right;
   text-align: center;
@@ -165,6 +165,7 @@ h2{
   display: none;
   width: 75%;
   padding-left: 12px;
+  opacity: 0.5;
 }
 
 .loading-text{
